2009-12-13  Christian Dywan  <christian@twotoasts.de>

        Reviewed by Holger Freyther.

        http://bugs.webkit.org/show_bug.cgi?id=31014
        [Gtk] Build fails with gtk+-2.10 (no tested with older releases)

        Guard GTK+ 2.12 specific tooltip code with #ifdef.

        * WebCoreSupport/ChromeClientGtk.cpp:
        (WebKit::ChromeClient::mouseDidMoveOverElement):

2009-12-11  Christian Dywan  <christian@twotoasts.de>

        Reviewed by Eric Seidel.

        [GTK] Build with --disable-svg is broken
        http://bugs.webkit.org/show_bug.cgi?id=32361

        * webkit/webkitwebframe.cpp:
        (webkit_web_frame_pause_svg_animation): Fix ENABLE(SVG) guards.

2009-12-10  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Xan Lopez.

        Add a missing null-check, that is causing some crash reports.

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::committedLoad):

2009-12-10  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Xan Lopez.

        [GTK] Should provide an API to control the IconDatabase
        https://bugs.webkit.org/show_bug.cgi?id=32334

        First step towards a full IconDatabase API. This provides
        notification for pages with favicons, and lets clients handle
        them.

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::registerForIconNotification):
        (WebKit::FrameLoaderClient::dispatchDidReceiveIcon):
        * tests/resources/blank.ico: Added.
        * tests/testwebview.c: Added.
        (server_callback):
        (idle_quit_loop_cb):
        (icon_uri_changed_cb):
        (icon_loaded_cb):
        (test_webkit_web_view_icon_uri):
        (main):
        * webkit/webkitprivate.cpp:
        (closeIconDatabaseOnExit):
        (webkit_init):
        * webkit/webkitprivate.h:
        * webkit/webkitwebview.cpp:
        (webkit_web_view_get_property):