@@ -1,3 +1,15 @@
+2009-12-13  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>
+
+        Reviewed by Xan Lopez.
+
+        Also give the right click event to the frame's event handler, if
+        there WebCore decides to not generate the default context
+        menu. This fixes some pages that handle right-button clicks for
+        things other than context menu creation.
+
+        * webkit/webkitwebview.cpp:
+        (webkit_web_view_forward_context_menu_event):
+
 2009-12-13  Christian Dywan  <christian@twotoasts.de>
 
         Reviewed by Holger Freyther.
